--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>toboolist</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <!--logo-and-title-->
     <header>
-
+        <div class="header-bar">
+            <img class="logo" src="./img/logo-trasparente.png" alt="logo">
+            <h1 class="header-title">Toboolist</h1>
+        </div>
     </header>
 
     <main>
+        <div class="central-body">
+        </div>
         <!--button-bar-->
         <section>
 
@@ -22,6 +33,7 @@
         <section>
 
         </section>
+
     </main>
 
     <footer></footer>
