feat: adding buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!--logo-and-title-->
     <header>
-        <div class="header-bar">
+        <div class="header-bar" class="wrapper">
             <img class="logo" src="./img/logo-trasparente.png" alt="logo">
             <h1 class="header-title">Toboolist</h1>
         </div>
@@ -24,15 +24,28 @@
 
     <main>
         <div class="central-body">
+            <!--button-bar-->
+            <section class="button">
+                <button id="task-button">Add Task</button>
+                <button id="section-button">Add Section</button>
+            </section>
+            <!--un-ordered-list-->
+            <section class="main-list">
+                <ul>
+                    <li>
+                        New task
+                        <ol>
+                            <li>
+                                Quaterly Newsletter Editorial
+                            </li>
+                        </ol>
+            
+                    </li>
+                </ul>
+
+            </section>
         </div>
-        <!--button-bar-->
-        <section>
 
-        </section>
-        <!--un-ordered-list-->
-        <section>
-
-        </section>
 
     </main>
 
