refactor: adjusting button and labels

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="central-body">
             <!--button-bar-->
             <section class="button">
-                <button id="task-button">Add Task</button>
+                <button id="task-button"><span calss="font-sx-inside">Add Task</span></button>
                 <button id="section-button">Add Section</button>
             </section>
             <!--un-ordered-list-->
@@ -35,7 +35,8 @@
                     <li>
                         <strong class="title-main-list">New Task</strong>
                         <ul class="secondary-list">
-                            <li class="custom-bullet-check">Quaterly Newsletter <span class="editorial">Editorial</span></li>
+                            <li class="custom-bullet-check">Quaterly Newsletter <span class="editorial">Editorial</span>
+                            </li>
                         </ul>
                     </li>
                 </ul>
@@ -43,10 +44,11 @@
                     <li>
                         <strong class="title-main-list">Today</strong>
                         <ul class="secondary-list">
-                            <li class="custom-bullet-check">Recruiting blog post <span class="editorial">Editorial</span></li>
-                            <li class="custom-bullet-check">Mobile app Launch Q1 Goals</li>
-                            <li calss="custom-buller-cross">Interview John H. Recruiting</li>
-                            <li class="custom-bullet-check">Summit Update to mobile storefornts Mobile</li>
+                            <li class="custom-bullet-check">Recruiting blog post <span
+                                    class="editorial">Editorial</span></li>
+                            <li class="custom-bullet-check">Mobile app Launch <span class="prova"><span class="q1-goals">Q1 Goals</span></span></li>
+                            <li class="custom-buller-cross">Interview John H. <span class="recruiting">Recruiting</span></li>
+                            <li class="custom-bullet-check">Summit Update to mobile storefornts <span class="mobile">Mobile</span></li>
                         </ul>
                     </li>
                 </ul>
@@ -54,10 +56,11 @@
                     <li class="custom-bullet-check">
                         <strong class="title-main-list">Upcoming</strong>
                         <ul class="secondary-list">
-                            <li calss="custom-buller-cross">Schedule meeting with Alex</li>
-                            <li class="custom-bullet-check">Homepage refresh Website</li>
-                            <li class="custom-bullet-check">Onboard new Sales team members Sales</li>
-                            <li class="custom-bullet-check">Review editorial calendar <span class="editorial">Editorial</span></li>
+                            <li class="custom-buller-cross">Schedule meeting with Alex</li>
+                            <li class="custom-bullet-check">Homepage refresh <span class="website">Website</span></li>
+                            <li class="custom-bullet-check">Onboard new Sales team members <span class="sales">Sales</span></li>
+                            <li class="custom-bullet-check">Review editorial calendar <span
+                                    class="editorial">Editorial</span></li>
                         </ul>
                     </li>
                 </ul>
