--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li>
                         <strong class="title-main-list">New Task</strong>
                         <ul class="secondary-list">
-                            <li class="custom-bullet-check">Quaterly Newsletter <span class="editorial">Editorial</span>
+                            <li class="custom-bullet-check"><span class="green-check"> &check;</span> Quaterly Newsletter <span class="editorial">Editorial</span>
                             </li>
                         </ul>
                     </li>
@@ -44,11 +44,11 @@
                     <li>
                         <strong class="title-main-list">Today</strong>
                         <ul class="secondary-list">
-                            <li class="custom-bullet-check">Recruiting blog post <span
+                            <li class="custom-bullet-check"><span class="green-check"> &check;</span> Recruiting blog post <span
                                     class="editorial">Editorial</span></li>
-                            <li class="custom-bullet-check">Mobile app Launch <span class="prova"><span class="q1-goals">Q1 Goals</span></span></li>
-                            <li class="custom-buller-cross">Interview John H. <span class="recruiting">Recruiting</span></li>
-                            <li class="custom-bullet-check">Summit Update to mobile storefornts <span class="mobile">Mobile</span></li>
+                            <li class="custom-bullet-check"><span class="green-check"> &check;</span> Mobile app Launch <span class="prova"><span class="q1-goals">Q1 Goals</span></span></li>
+                            <li class="custom-bullet-cross"><span class="red-cross"> &cross;</span> Interview John H. <span class="recruiting">Recruiting</span></li>
+                            <li class="custom-bullet-check"><span class="green-check"> &check;</span> Summit Update to mobile storefornts <span class="mobile">Mobile</span></li>
                         </ul>
                     </li>
                 </ul>
@@ -56,10 +56,10 @@
                     <li class="custom-bullet-check">
                         <strong class="title-main-list">Upcoming</strong>
                         <ul class="secondary-list">
-                            <li class="custom-buller-cross">Schedule meeting with Alex</li>
-                            <li class="custom-bullet-check">Homepage refresh <span class="website">Website</span></li>
-                            <li class="custom-bullet-check">Onboard new Sales team members <span class="sales">Sales</span></li>
-                            <li class="custom-bullet-check">Review editorial calendar <span
+                            <li class="custom-bullet-cross"><span class="red-cross"> &cross;</span> Schedule meeting with Alex</li>
+                            <li class="custom-bullet-check"><span class="green-check"> &check;</span> Homepage refresh <span class="website">Website</span></li>
+                            <li class="custom-bullet-check"><span class="green-check"> &check;</span> Onboard new Sales team members <span class="sales">Sales</span></li>
+                            <li class="custom-bullet-check"><span class="green-check"> &check;</span> Review editorial calendar <span
                                     class="editorial">Editorial</span></li>
                         </ul>
                     </li>
